--- a/.github/workflows/turistguide-ci.yml
+++ b/.github/workflows/turistguide-ci.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Qodana Scan
         uses: JetBrains/qodana-action@v2024.1
         with:
-          linter: jetbrains/qodana-jvm # til Java-projekter
+          args: "--linter jetbrains/qodana-jvm:2024.1"
           results-dir: qodana-report
 
       # 🔹 Gem Qodana rapport som artefakt
