--- a/.github/workflows/turistguide-ci.yml
+++ b/.github/workflows/turistguide-ci.yml
@@ -54,3 +54,16 @@ jobs:
           name: java-app
           path: target/*.jar
 
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    permissions:
+      id-token: write
+      contents: read
+
+    steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: java-app
+
