--- a/.github/workflows/turistguide-ci.yml
+++ b/.github/workflows/turistguide-ci.yml
@@ -67,3 +67,16 @@ jobs:
         with:
           name: java-app
 
+      - name: Login to Azure
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID }}
+
+      - name: Deploy to Azure Web App
+        uses: azure/webapps-deploy@v3
+        with:
+          app-name: 'tourist-guide-jms-gr4'
+          slot-name: 'Production'
+          package: '*.jar'
