--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.application.name=Turistguide2
-spring.profiles.active=dev
+spring.profiles.active=prod
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
